# jb-installer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/entries/: goland.json  idea.json  pycharm.json  rustrover.json
src/ides/: goland.rs  ide.rs  idea.rs  mod.rs  pycharm.rs  rubymine.rs  rustrover.rs
