[package]
name = "painite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flate2 = { version = "1.0.28" }
serde_json = "1.0.114"
spinoff = "0.8.0"
tar = { version = "0.4.40" }
serde = { version = "1.0.197", features = ["derive"] }
sudo = "0.6.0"
recolored = "1.9.3"
cargo-deb = "2.0.6"
